--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "Maarten Coppens",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.2",
     "discord.js": "^14.3.0",
     "ldpos-client": "^11.3.0"
